# forgetbench

./: .gitignore  CITATION.cff  README.md  presentation.html  pyproject.toml
forgetbench/: __init__.py  __main__.py  core.py  metrics.py  runner.py  tasks.py  validate.py
forgetbench/adapters/: __init__.py  keyword_memory.py  leaky_memory.py  letta_adapter.py  mem0_adapter.py  zep_adapter.py
forgetbench/cases/: cases.json  loader.py
tests/: test_forgetbench.py  test_validate.py
